--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -7,4 +7,9 @@
       name: apache2
       state: present
       
+  - name: i want to start webserver (service apache2 start)
+    service: 
+        name: apache2 
+        state: started
+      
 
