--- a/myfileHandling.yml
+++ b/myfileHandling.yml
@@ -23,10 +23,21 @@
     apt:
       name: apache2 
       state: present 
+    
 
   - name: i want copy index file into node side
     template:
          src: myindex.j2
          dest: /var/www/html/index.html
+    notify: startwebserver
+
+
+  handlers:
+  - name: startwebserver
+    service: 
+       name: apache2 
+       state: started 
+      
+
 
     
