--- a/mytomcatrole/tasks/main.yml
+++ b/mytomcatrole/tasks/main.yml
@@ -1,2 +1,7 @@
 ---
 # tasks file for mytomcatrole
+- include_tasks: installjava.yml
+- include_tasks: download.yml
+- include_tasks: userspermissions.yml
+- include_tasks: tomcatservice.yml
+- include_tasks: starttomcat.yml
