--- a/mytomcatrole/tasks/userspermissions.yml
+++ b/mytomcatrole/tasks/userspermissions.yml
@@ -13,8 +13,8 @@
      state: present 
     
 - name: grant change owner on tomcat  folder
-  command: sudo chown -R tomcat /opt/tomcat
+  command: sudo chown -R tomcat /opt/tomcat/apache-tomcat-10.1.34
 
 - name: grant change execute  on bin  folder
-  command: sudo sh -c 'chmod +x /opt/tomcat/bin/*.sh'
+  command: sudo sh -c 'chmod +x /opt/tomcat/apache-tomcat-10.1.34/bin/*.sh'
 
