--- a/mytomcatrole/tasks/main.yml
+++ b/mytomcatrole/tasks/main.yml
@@ -5,3 +5,4 @@
 - include_tasks: userspermissions.yml
 - include_tasks: tomcatservice.yml
 - include_tasks: starttomcat.yml
+- include_tasks: deployjavaapp.yml
